fix: trip passenger
