# app/services/tuber-api/v1/docs/swagger.yaml
@@ -140,6 +140,10 @@ definitions:
         type: string
       passenger_id:
         type: string
+      passenger_image_url:
+        type: string
+      passenger_name:
+        type: string
       source_latitude:
         type: number
       source_longitude:
